[package]
name = "providerbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["full"] }
serde = "1.0.137"
serde_json = "1.0.81"

roux = "1.3.11"
reqwest = "0.11.10"

clitrs = { path = "../clitrs", version = "0.1.0" }